--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
 language: php
 
 php:
-  - 5.6
-  - hhvm
+  - '5.6'
+  - '7.0'
+  - '7.1'
+  - hhvm-3.3
+  - hhvm-3.6
   - nightly
 
-before_script:
-  - travis_retry composer self-update
-
 install:
-   - composer install --dev
+  - curl -s http://getcomposer.org/installer | php
+  - composer require satooshi/php-coveralls:~1.0@stable
+  - php composer.phar install --dev --no-interaction
 
-script: phpunit
+script:
+  - mkdir -p build/logs
+  - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+after_success:
+  - travis_retry php vendor/bin/coveralls
