--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ php:
   - '7.1'
   - nightly
 
+before_install:
+  - echo 'extension = mcrypt.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+
+
 install:
   - curl -s http://getcomposer.org/installer | php
   - composer require satooshi/php-coveralls:~1.0@stable
